chore: add reset password email template

--- a/src/communication/email/email-templates/signup.pug
+++ b/src/communication/email/email-templates/signup.pug
@@ -16,7 +16,7 @@ block content
             alt="Warning"
           )
           br
-          | If you didn't try to sign in just now, please change your password to protect your account. 
+          | If you didn't initiate this, please ignore. 
           br
           br
           | If you have any questions, feel free to contact our 
